0.11 
    - Documented the goals with this project/distribution

0.10 2010-04-02
    - Minor optimizations to avoid unnecessary copying of '$content' strings
    - Fixed dump_record() to properly insert ellipsis when truncating stream content
      - added tests for this
    - Added more tests for dump_record()

0.09 2010-03-31
    - Added check_params() and dump_record()
      - added documentation 
      - added test for check_params() and dump_record() (incomplete)
    - Minor optimizations to build_stream() and build_record()

0.08 2010-02-16
    - Documented return value of get_type_name(), get_role_name()
      and get_protocol_status_name().
    - Changed test prerequisite from Test::BinaryData to Test::HexString.
    - Corrected note about AnyEvent::FCGI, it's capable of multiplexing. 

0.07 2010-02-10
    - Added notes about existing Perl implementations.
    - Added references to specifications and white papers.
    - Minor internal "cosmetic" changes
    - Added more tests for build_begin_request() and build_end_request()

0.06 2010-02-09
    - NOTE: Changed application_status to app_status, this affects users of
      parse_record() or parse_record_body(). Former was unnecessarily verbose.
      Latter also matches the component name of FCGI_BeginRequestBody struct.
    - Added build_begin_request() and build_end_request()
      - added documentation and tests for these

0.05 2010-02-06
    - Net::FastCGI::Constant
      - Improved documentation
      - Added @FCGI_TYPE_NAME, @FCGI_ROLE_NAME and @FCGI_PROTOCOL_STATUS_NAME
        - Re-factored Net::FastCGI::Protocol to use these.
      - Renamed FCGI_MAX_LEN to FCGI_MAX_CONTENT_LEN
        - FCGI_MAX_LEN is deprecated and will be removed in a future version.
    - Net::FastCGI::Protocol
      - Fixed parse_record() and parse_record_body() to properly detect malformed
        stream records.
        - Added tests for this.