@@ -39,9 +39,10 @@ Net::FastCGI::Protocol - Provides functions to build and parse FastCGI messages.
     $octets = build_record($type, $request_id);
     $octets = build_record($type, $request_id, $content);
     $record = parse_record($octets);
+    @values = parse_record($octets);
     $record = parse_record_body($type, $request_id, $content);
-    $string = dump_record($type, $request_id);
-    $string = dump_record($type, $request_id, $content);
+    $string = dump_record($octets);
+    $string = dump_record_body($type, $request_id, $content);
     
     # Stream
     $octets = build_stream($type, $request_id, $content);
@@ -61,14 +62,12 @@ Net::FastCGI::Protocol - Provides functions to build and parse FastCGI messages.
 
 Provides functions to build and parse FastCGI messages.
 
-=head1 OCTETS
+=head1 FUNCTIONS
 
 Please note that all functions in this package expects octets, not unicode strings.
 It's the callers responsibility to ensure this. If any of theese functions is called
 with unicode strings containing code points above 255, they will most likely produce
 malformed messages.
-
-=head1 FUNCTIONS
 
 =head2 build_begin_request
 
@@ -100,8 +99,8 @@ mask C<FCGI_KEEP_CONN> if a persistent connection is desired.
 
 =item C<$params>
 
-A hash reference containing name/value pairs. Typically this is the CGI environ 
-that the application expects.
+A hash reference containing name-value pairs. This is the CGI environ that the 
+application expects.
 
 =item C<$stdin> (optional)
 
@@ -371,7 +370,7 @@ I<Arguments>
 
 =item C<$params>
 
-A hash reference containing name/value pairs.
+A hash reference containing name-value pairs.
 
 =back
 
@@ -563,8 +562,36 @@ Dump a C<FCGI_Record>.
 
 I<Usage>
 
-    $string = dump_record($type, $request_id);
-    $string = dump_record($type, $request_id, $content);
+    $string = dump_record($octets);
+
+I<Arguments>
+
+=over 4
+
+=item C<$octets>
+
+A string of octets containing at least one record.
+
+=back
+
+I<Returns>
+
+=over 4
+
+=item C<$string>
+
+A short (less than 100 characters) string representation of the record in printable US-ASCII.
+
+=back
+
+=head2 dump_record_body
+
+Dump a C<FCGI_Record>.
+
+I<Usage>
+
+    $string = dump_record_body($type, $request_id);
+    $string = dump_record_body($type, $request_id, $content);
 
 I<Arguments>
 
@@ -670,6 +697,8 @@ I<Usage>
     $header = parse_header($octets);
     print $header->{type};
     print $header->{request_id};
+    print $header->{content_length};
+    print $header->{padding_length};
 
 I<Arguments>
 
@@ -731,7 +760,7 @@ I<Returns>
 
 =item C<$params>
 
-A hash reference containing name/value pairs.
+A hash reference containing name-value pairs.
 
 =back
 
@@ -741,7 +770,12 @@ Parses a C<FCGI_Record>.
 
 I<Usage>
 
+    ($type, $request_id, $content)
+      = parse_record($octets);
+
     $record = parse_record($octets);
+    print $record->{type};
+    print $record->{request_id};
 
 I<Arguments>
 
@@ -750,6 +784,55 @@ I<Arguments>
 =item C<$octets>
 
 A string of octets containing at least one record.
+
+=back
+
+I<Returns>
+
+In list context:
+
+=over 4
+
+=item C<$type>
+
+An unsigned 8-bit integer.
+
+=item C<$request_id>
+
+An unsigned 16-bit integer.
+
+=item C<$content>
+
+A string of octets containing the record content.
+
+=back
+
+In scalar context a hash reference containing the C<FCGI_Record> components. 
+See L</parse_record_body>.
+
+=head2 parse_record_body
+
+Parses a C<FCGI_Record>.
+
+I<Usage>
+
+    $record = parse_record_body($type, $request_id, $content);
+
+I<Arguments>
+
+=over 4
+
+=item C<$type>
+
+An unsigned 8-bit integer.
+
+=item C<$request_id>
+
+An unsigned 16-bit integer.
+
+=item C<$content>
+
+A string of octets containing the record content.
 
 =back
 
@@ -830,37 +913,6 @@ An unsigned 8-bit integer.
 
 =back
 
-=head2 parse_record_body
-
-Parses a C<FCGI_Record> body.
-
-I<Usage>
-
-    $record = parse_record_body($type, $request_id, $content);
-
-I<Arguments>
-
-=over 4
-
-=item C<$type>
-
-An unsigned 8-bit integer.
-
-=item C<$request_id>
-
-An unsigned 16-bit integer.
-
-=item C<$content>
-
-A string of octets containing the record content.
-
-=back
-
-I<Returns>
-
-Returns a hash reference containing the C<FCGI_Record> components.
-See L</parse_record>.
-
 =head2 parse_unknown_type_body
 
 Parses a C<FCGI_UnknownTypeBody>.
@@ -886,6 +938,33 @@ I<Returns>
 =item C<$type>
 
 An unsigned 8-bit integer.
+
+=back
+
+=head2 get_record_length
+
+I<Usage>
+
+    $length = get_record_length($octets);
+
+I<Arguments>
+
+=over 4
+
+=item C<$octets>
+
+A string of octets containing at least one C<FCGI_Header>.
+
+=back
+
+I<Returns>
+
+=over 4
+
+=item C<$length>
+
+An unsigned integer containing the length of record in octets. If C<$octets> has 
+insufficient octets C<(< FCGI_HEADER_LEN)> C<0> is returned.
 
 =back
 
